search functionality added to get filtered news
